# WebView

./: .gitignore  CMakeLists.txt  Info.plist  LICENSE  README.md
.github/workflows/: CI.yml
cmake/: DownloadWebView.cmake
examples/example_navigation/: CMakeLists.txt
examples/example_navigation/src/: main.cpp
include/WebView/: WebView2EnvironmentOptions.h  webview.h
src/: webview.cc
src/include/: webview.h
